========================================
Change log for mod_reader
========================================

2025-04-03 (50)
 - fix inconsistencies between database XML schema and actual fields in the DB

2024-12-11 (49)
 - fix incorrect number of parameters in SQL call to select attempts from previous terms in view.php

2024-03-11 (47)
 - change progress bar to one that uses Bootstrap. Also, allow teacher to specify 'Expanding progress bar'. Many thanks to Adam Jenkins

2024-03-07 (45)
 - fix typo in lib.php dirroot => dirroot

2024-03-07 (44)
 - convert legacy cron job to a scheduled_task (Moodle >= 2.7)

2024-03-07 (43)
 - protect legacy event handlers from the code police in Moodle >= 4.2

2024-01-24 (42)
 - small change to cheatsheet for compatability with Moodle 4.x

2023-03-23 (41)
 - make certain tools compatible with Moodle 4.x which uses question_versions table

2023-02-19 (40)
 - when showing user profile pictures on Moodle >= 3.11, use 

2023-02-18 (39)
 - fix permissions for displaying and acceessing the checkboxes on reports pages

2022-05-11 (38)
 - add message to CHANGES.txt

2022-05-11 (38)
 - compatability with Moodle 3.11: use /core_user/fields to get user name fields; user get_string('grade', 'grades')

2022-04-04 (37)
 - get 'grade' from 'grades' lang pack instead of 'moodle'

2022-02-24 (36)
 - replace used of 'groups' in SQL because it is a reserved word in MySQL 8

2021-09-14 (35)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-28 (32)
 - : improve compatability wth PostgreSQL (1) use AVG function instead of (SUM / COUNT); (2) use single quotes when concatenating strings

2021-06-08 (31)
 - add missing level 11 to Reading Level menu for changereaderlevel action in admin.php

2020-07-27 (30)
 - fix tool to export Reader tables

2020-03-01 (29)
 - include current version in tool to redo upgrade

2020-02-05 (28)